--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,8 +1,20 @@
 <h1>footer</h1>
 </body>
 
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"
-    integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
-    crossorigin="anonymous"></script>
+<footer id="footer" class="white-section">
+    <div class="container-fluid">
+
+
+
+      <i class="fab fa-twitter icon3"></i>
+      <i class="fab fa-instagram icon3"></i>
+      <i class="fab fa-facebook-f icon3"></i>
+      <i class="fas fa-envelope icon3"></i>
+
+
+    <p>© Copyright 2020 TinDog</p>
+    </div>
+
+  </footer>
 
 </html>
