--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,122 @@
-h1 {
-	background-color: aqua;
+
+.button1{
+  margin: 5% 3% 5% 0;
+
+}
+.navbar{
+  padding:0 0 4.5rem;
+}
+.navbar-brand{
+  font-family: 'Ubuntu';
+  font-size: 2.5rem;
+  font-weight: bold;
+}
+.nav-item{
+  padding: 0 18px;
+}
+.nav-link{
+  font-size: 1.2rem;
+  font-family: 'Montserrat-light';
+}
+.image1{
+  width:60%;
+  transform: rotate(0deg);
+  position: absolute;
+  right: 20%;
+
+}
+.icon2{
+  color: #ef8172;
+  margin-bottom: 1rem;
+}
+p{
+  color: #8f8f8f;
+}
+
+/* feature section */
+
+#features{
+  position: relative;
+}
+.heading{
+  font-size: 1.5rem;
+}
+.icon2:hover{
+  color:#ff4c68;
+}
+
+.feature-box{
+  padding: 5%;
+}
+
+/* testimonial section */
+
+#testimonials{
+  background-color: #ef8172;
+}
+.testimonial-text{
+
+  line-height: 1.5;
+  font-size: 3.5rem;
+}
+.testimonial-image{
+  width:10%;
+  border-radius: 100%;
+  margin:20px;
+}
+
+/* press section */
+.dog-image{
+  width:40%;
+  border-radius: 100%;
+}
+
+#press{
+  background-color:  #ef8172;
+  padding-bottom: 3%;
+}
+.press-logo{
+  width:15%;
+  margin:20px 20px 50px;
+
+}
+
+
+/* pricing section */
+#pricing{
+  padding: 100px;
+
+}
+.pricing-component{
+  padding: 3% 2%;
+}
+
+.button2{
+  width: 100%;
+}
+
+
+/* cta section */
+
+.head5{
+  line-height: 1.5;
+  font-size: 3rem;
+    }
+
+/* footer section */
+
+.icon3{
+  margin: 20px 10px;
+}
+
+/* phone */
+@media (max-width:1028px){
+  .image1{
+    position: static;
+    transform: rotate(0);
+  }
+  #title .container-fluid{
+    text-align: center;
+  }
+
 }
