--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,16 +5,63 @@
 <head>
     <meta charset="utf-8">
     <title>Login</title>
+
+    <!-- css file -->
     <link rel="stylesheet" href="css/styles.css">
+
+    <!-- bootstrap cdn -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
         integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+
+
 </head>
 
 <body>
-    <h1>login page</h1>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm-12 col-md-6 col-lg-5 left-side d-none d-md-block">
+                <div class="container">
+                    <div class="row login-left">
+                        <p class="brand-name">PetAdoption</p>
+                        <p class="brand-desc">Adopt a pet before they have to go to the shelter.</p>
+                        <img class="img-fluid" src="images/login.svg">
+
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="col-sm-12 col-md-6 col-lg-7 right-side">
+
+                <div class="login-form">
+                    <h2 class="sign">Sign in to PetAdoption</h2>
+                    <br>
+                    <button type="submit" class="btn btn-primary btn-block"><img
+                            src="https://img.icons8.com/color/16/000000/google-logo.png"> Signup Using
+                        Google</a></button>
+                    <br>
+                    <br>
+                    <hr class="hr-text" data-content="OR">
+
+                    <form>
+                        <div class="form-group">
+                            <label>Username or Email Address</label>
+                            <input type="text" class="form-control">
+                        </div>
+                        <div class="form-group">
+                            <label>Password</label>
+                            <input type="password" class="form-control">
+                        </div>
+                        <button type="submit" class="btn button">Login</button>
+                        <button type="submit" class="btn  register-button">Register</button>
+                    </form>
+                </div>
+
+            </div>
+        </div>
+    </div>
 </body>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"
-    integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
-    crossorigin="anonymous"></script>
 
 </html>
