--- a/public/css/register.css
+++ b/public/css/register.css
@@ -13,7 +13,7 @@ body {
 }
 
 .left-side {
-	background-color: #f1cdd7;
+	background-color: #ffe580;
 	color: #865c6c;
 	text-align: center;
 }
@@ -33,7 +33,7 @@ body {
 }
 label {
 	font-weight: 700;
-	font-size: 1.2rem;
+	font-size: 1rem;
 }
 
 .brand-name {
