--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,213 +1,187 @@
 <%-include("partials/header")%>
-
-<h1>home page</h1>
-
-<body>
-
-  <section id="title" class="colored-section">
-    <div class="container-fluid">
-
-      <!-- Nav Bar -->
-      <nav class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand " href="">PetAdoption</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="#footer">Contact</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#pricing">Pricing</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#cta">Download</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#abcd">Login</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-
-
-
-
-
-      <!-- Title -->
-
-      <div class="row">
-        <div class="col-lg-6">
-          <h1 class="heading1">Find new and interesting dogs for you and your family.</h1>
-          <button type="button" class="btn btn-dark btn-lg button1">Adopt</button>
-        </div>
-        <div class="col-lg-6">
-          <!-- <img class="image1" src="images/iphone6.png" alt="iphone-mockup"> -->
-          <img class="image1" src="public/images/PetAdopt.jpg" alt="iphone-mockup">
-
-        </div>
+<section id="title" class="colored-section  p-4 justify-content-center">
+  <div class="container-fluid">
+    <!-- Nav Bar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-gradient ">
+      <a class="navbar-brand" href="/">Pet<span class="adoption">Adoption<span></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="/login">Log in</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="/register"><button type="submit" class="btn btn-dark">Sign up</button></a>
+          </li>
+        </ul>
       </div>
-    </div>
+    </nav>
 
-  </section>
+    <!-- Title -->
 
-
-  <!-- Features -->
-
-  <section id="features" class="white-section">
-
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-lg-4 feature-box">
-          <i class="fas fa-check-circle fa-4x icon2"></i>
-          <h3 class="heading">Easy to use.</h3>
-          <p class="para1">So easy to use, even your dog could do it.</p>
-        </div>
-        <div class="col-lg-4 feature-box">
-          <i class="fas fa-bullseye fa-4x icon2"></i>
-          <h3 class="heading">Elite Clientele</h3>
-          <p class="para1">We have all the dogs, the greatest dogs.</p>
-        </div>
-        <div class="col-lg-4 feature-box">
-          <i class="fas fa-heart fa-4x icon2"></i>
-          <h3 class="heading">Guaranteed to work.</h3>
-          <p class="para1">Find the love of your dog's life or your money back.</p>
-        </div>
-      </div>
-    </div>
-
-
-  </section>
-
-
-  <!-- Testimonials -->
-
-  <section id="testimonials" class="colored-section">
-
-    <div id="testimonial-carousel" class="carousel slide" data-ride="false">
-      <div class="carousel-inner">
-        <div class="carousel-item active container-fluid ">
-          <h2 class="testimonial-text">I no longer have to sniff other dogs for love. I've found the hottest Corgi on
-            TinDog. Woof.</h2>
-          <img class="testimonial-image" src="public/images/dog-img.jpg" alt="dog-profile">
-          <em>Pebbles, New York</em>
-        </div>
-        <div class="carousel-item container-fluid">
-          <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of
-            their life. I think.</h2>
-          <img class="testimonial-image" src="public/images/lady-img.jpg" alt="lady-profile">
-          <em>Beverly, Illinois</em>
-
-        </div>
-
-
-        <a class="carousel-control-prev" href="#testimonial-carousel" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon"></span>
-        </a>
-        <a class="carousel-control-next" href="#testimonial-carousel" role="button" data-slide="next">
-          <span class="carousel-control-next-icon"></span>
-        </a>
-      </div>
-    </div>
-
-
-
-
-  </section>
-
-
-  <!-- Press -->
-
-  <section id="press" class="colored-section">
-    <img class="press-logo" src="public/images/techcrunch.png" alt="tc-logo">
-    <img class="press-logo" src="public/images/tnw.png" alt="tnw-logo">
-    <img class="press-logo" src="public/images/bizinsider.png" alt="biz-insider-logo">
-    <img class="press-logo" src="public/images/mashable.png" alt="mashable-logo">
-
-  </section>
-
-
-  <!-- Pricing -->
-
-  <section id="pricing" class="white-section">
-
-
-    <h2 class="heading1">A Plan for Every Dog lover.</h2>
-    <p>Get the best and rarest dogs.</p>
     <div class="row">
-      <div class="pricing-component col-lg-4 col-md-6">
-        <div class="card">
-          <div class="card-header">
-            <h3>AfghanHound</h3>
-          </div>
-          <div class="card-body">
-            <img class="dog-image" src="public/images/AfghanHound.jpg" alt="dog-profile">
-            <h2>Get It</h2>
-            <p>Afghan Hound</p>
-            <p>Expectancy :12</p>
-
-            <button type="button" class="btn btn-outline-dark btn-lg button2">Adopt</button>
-          </div>
-        </div>
-
-
+      <div class="col-lg-6">
+        <h3 class="heading3">The online pet adoption community where people who want to adopt a pet connect with people
+          who need to rehome a dog or cat.</h3>
+        <button type="button" class="btn btn-dark btn-lg button1">Adopt</button>
+        <button type="button" class="btn btn-dark btn-lg button1">Rehome</button>
       </div>
-      <div class="pricing-component col-lg-4 col-md-6">
-        <div class="card">
-          <div class="card-header">
-            <h3>Boxer</h3>
-          </div>
-          <div class="card-body">
-            <img class="dog-image" src="public/images/boxer.jpg" alt="dog-profile">
-            <h2>Get It</h2>
-            <p>Boxer</p>
-            <p>Expectancy :10.4</p>
-            <button type="button" class="btn btn-dark btn-lg button2">Adopt</button>
-          </div>
-        </div>
-
-      </div>
-      <div class="pricing-component col-lg-4">
-        <div class="card">
-          <div class="card-header">
-            <h3>Pug</h3>
-          </div>
-          <div class="card-body">
-            <img class="dog-image" src="public/images/pug.jpg" alt="dog-profile">
-            <h2>Get It</h2>
-            <p>Pug</p>
-            <p>Expectancy :16</p>
-            <button type="button" class="btn btn-dark btn-lg button2">Adopt</button>
-          </div>
-        </div>
+      <div class="col-lg-6">
+        <img class="image1" src="images/dogBanner.svg" alt="iphone-mockup">
 
       </div>
     </div>
+  </div>
 
-  </section>
+</section>
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 220">
+  <path fill="#f1cdd7" fill-opacity="1"
+    d="M0,192L40,197.3C80,203,160,213,240,202.7C320,192,400,160,480,165.3C560,171,640,213,720,208C800,203,880,149,960,122.7C1040,96,1120,96,1200,106.7C1280,117,1360,139,1400,149.3L1440,160L1440,0L1400,0C1360,0,1280,0,1200,0C1120,0,1040,0,960,0C880,0,800,0,720,0C640,0,560,0,480,0C400,0,320,0,240,0C160,0,80,0,40,0L0,0Z">
+  </path>
+</svg>
+
+<!-- Features -->
+
+<section id="features" class="white-section p-4">
+
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-lg-4 feature-box">
+        <i class="fas fa-check-circle fa-4x icon2"></i>
+        <h3 class="heading">Easy to use.</h3>
+        <p class="para1">So easy to use, even your dog could do it.</p>
+      </div>
+      <div class="col-lg-4 feature-box">
+        <i class="fas fa-bullseye fa-4x icon2"></i>
+        <h3 class="heading">Elite Clientele</h3>
+        <p class="para1">We have all the dogs, the greatest dogs.</p>
+      </div>
+      <div class="col-lg-4 feature-box">
+        <i class="fas fa-heart fa-4x icon2"></i>
+        <h3 class="heading">Guaranteed to work.</h3>
+        <p class="para1">Find the love of your dog's life or your money back.</p>
+      </div>
+    </div>
+  </div>
 
 
-  <!-- Call to Action -->
-
-  <section id="cta" class="colored-section">
-    <div class="container-fluid">
+</section>
 
 
-      <h3 class="head5">Find the True Love of Your Dog's Life Today.</h3>
-      <button type="button" class="btn btn-dark btn-lg button1 ">Adopt</button>
+<!-- Testimonials -->
+
+<section id="testimonials" class="colored-section pt-2 p-4 text-center justify-content-center">
+  <div id="testimonial-carousel" class="carousel slide" data-ride="false">
+    <div class="carousel-inner">
+      <div class="carousel-item active container-fluid ">
+        <h2 class="testimonial-text">I no longer have to sniff other dogs for love. I've found the hottest Corgi on
+          TinDog. Woof.</h2>
+        <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
+        <em>Pebbles, New York</em>
+      </div>
+      <div class="carousel-item container-fluid">
+        <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of
+          their life. I think.</h2>
+        <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
+        <em>Beverly, Illinois</em>
+
+      </div>
+      <a class="carousel-control-prev" href="#testimonial-carousel" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+      </a>
+      <a class="carousel-control-next" href="#testimonial-carousel" role="button" data-slide="next">
+        <span class="carousel-control-next-icon"></span>
+      </a>
+    </div>
+  </div>
+
+
+
+
+</section>
+
+
+<!-- Press -->
+
+<section id="press" class="colored-section">
+  <div class="container">
+    <div class="row g-5 text-center justify-content-center">
+      <div class="col-md-2"><img src="https://www.peopleforanimalsindia.org/images/logo.png" class="img-fluid"></div>
+      <div class="col-md-2"><img src="https://charlies-care.com/wp-content/uploads/2017/11/CareLogo_1.png"
+          class="img-fluid"></div>
+      <div class="col-md-2"><img src="https://vspca.org/wp-content/uploads/2015/12/website_logo.png" class="img-fluid">
+      </div>
+      <div class="col-md-2"><img
+          src="http://www.sanjaygandhianimalcarecentre.org/images/sanjaygandhianimalcarecentre-logo.jpg"
+          class="img-fluid"></div>
 
     </div>
-
-  </section>
-
-
-
-
-</body>
-
-
+  </div>
+</section>
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1340 280">
+  <path fill="#f1cdd7" fill-opacity="1"
+    d="M0,64L48,74.7C96,85,192,107,288,106.7C384,107,480,85,576,112C672,139,768,213,864,229.3C960,245,1056,203,1152,192C1248,181,1344,203,1392,213.3L1440,224L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z">
+  </path>
+</svg>
 
 
-<%-include("partials/footer")%>
+<!-- Pricing -->
+
+<section id="pricing" class="white-section">
+  <h2 class="heading1">MEET OUR RECENT ARRIVALS</h2>
+  <p></p>
+  <div class="row">
+    <div class="pricing-component col-lg-4 col-md-6">
+      <div class="card">
+        <div class="card-header">
+          <h3>AfghanHound</h3>
+        </div>
+        <div class="card-body">
+          <img class="dog-image" src="images/AfghanHound.jpg" alt="dog-profile">
+          <h2>Get It</h2>
+          <p>Afghan Hound</p>
+          <p>Expectancy :12</p>
+
+          <button type="button" class="btn btn-dark btn-lg button2">Adopt</button>
+        </div>
+      </div>
+
+
+    </div>
+    <div class="pricing-component col-lg-4 col-md-6">
+      <div class="card">
+        <div class="card-header">
+          <h3>Boxer</h3>
+        </div>
+        <div class="card-body">
+          <img class="dog-image" src="images/boxer.jpg" alt="dog-profile">
+          <h2>Get It</h2>
+          <p>Boxer</p>
+          <p>Expectancy :10.4</p>
+          <button type="button" class="btn btn-dark btn-lg button2">Adopt</button>
+        </div>
+      </div>
+
+    </div>
+    <div class="pricing-component col-lg-4">
+      <div class="card">
+        <div class="card-header">
+          <h3>Pug</h3>
+        </div>
+        <div class="card-body">
+          <img class="dog-image" src="images/pug.jpg" alt="dog-profile">
+          <h2>Get It</h2>
+          <p>Pug</p>
+          <p>Expectancy :16</p>
+          <button type="button" class="btn btn-dark btn-lg button2">Adopt</button>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+
+  <%-include("partials/footer")%>
