--- a/views/login.ejs
+++ b/views/login.ejs
@@ -19,14 +19,14 @@
 </head>
 
 <body>
-    <div class="container-fluid">
+    <div class="container-fluid cont-login">
         <div class="row">
             <div class="col-sm-12 col-md-6 col-lg-5 left-side d-none d-md-block">
                 <div class="container">
                     <div class="row login-left">
                         <p class="brand-name">PetAdoption</p>
                         <p class="brand-desc">Adopt a pet before they have to go to the shelter.</p>
-                        <img class="img-fluid" src="images/login.svg">
+                        <img class="img-fluid animated bounce infinite" src="images/login.svg">
 
                     </div>
 
