login and profile image

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,6 +16,8 @@
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/d58e9dd237.js" crossorigin="anonymous"></script>
 
+    <link rel="shortcut icon" href="https://img.icons8.com/fluent/48/000000/pets.png" type="image" />
+
 
 
 </head>
