--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,6 +14,7 @@
         integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+    <link rel="shortcut icon" href="https://img.icons8.com/fluent/48/000000/pets.png" type="image" />
 
 
 </head>
@@ -38,25 +39,28 @@
                 <div class="login-form">
                     <h2 class="sign">Sign in to PetAdoption</h2>
                     <br>
-                    <button type="submit" class="btn btn-primary btn-block"><img
-                            src="https://img.icons8.com/color/16/000000/google-logo.png"> Signup Using
-                        Google</a></button>
-                    <br>
-                    <br>
+
                     <hr class="hr-text" data-content="OR">
 
-                    <form>
+                    <form action="login" method="POST">
+                        <% if(typeof errors != 'undefined'){ %> <% errors.forEach(function(error) { %>
+                        <div class="alert alert-danger alert-dismissible">
+                            <button type="button" class="close" data-dismiss="alert">&times;</button>
+                            <%= error.msg %>
+                        </div>
+                        <% }); %>
+                        <% } %>
                         <div class="form-group">
-                            <label>Username or Email Address</label>
-                            <input type="text" class="form-control">
+                            <label>Email Address</label>
+                            <input type="text" class="form-control" name="email">
                         </div>
                         <div class="form-group">
                             <label>Password</label>
-                            <input type="password" class="form-control">
+                            <input type="password" class="form-control" name="password">
                         </div>
                         <button type="submit" class="btn button">Login</button>
-                        <button type="submit" class="btn  register-button">Register</button>
                     </form>
+                    <p class="mt-4">No Account? <a class="feat" href="register">Register</a>
                 </div>
 
             </div>
