--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,6 +10,7 @@
       </button>
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
+          
           <li class="nav-item active">
             <a class="nav-link" href="/login">Log in</a>
           </li>
@@ -26,7 +27,7 @@
       <div class="col-lg-6">
         <h3 class="heading3">The online pet adoption community where people who want to adopt a pet connect with people
           who need to rehome a dog or cat.</h3>
-        <button type="button" class="btn btn-dark btn-lg button1">Adopt</button>
+        <a href="/showPets"><button type="button" class="btn btn-dark btn-lg button1">Adopt</button></a>
         <button type="button" class="btn btn-dark btn-lg button1">Rehome</button>
       </div>
       <div class="col-lg-6">
