--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,6 +14,10 @@
         integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+
+
+
+    <!-- logo -->
     <link rel="shortcut icon" href="https://img.icons8.com/fluent/48/000000/pets.png" type="image" />
 
 
@@ -52,7 +56,7 @@
                         <% } %>
                         <div class="form-group">
                             <label>Email Address</label>
-                            <input type="text" class="form-control" name="email">
+                            <input type="text" class="form-control " name="email">
                         </div>
                         <div class="form-group">
                             <label>Password</label>
