--- a/views/showPets.ejs
+++ b/views/showPets.ejs
@@ -26,11 +26,11 @@
 
 
         <!-- Title -->
-        </form>
+        
 
-        <form class="form-inline mr-auto">
-            <input class="form-control mr-sm-2" id="bar" type="text" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success btn-rounded btn-md my-0" id="searchs" type="submit">Search</button>
+        <form class="form-inline mr-auto" action="/showPets" method="GET">
+            <input class="form-control mr-sm-2" id="bar" type="text" name = "search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success btn-rounded btn-md my-0" id="searchs" value="Search" type="submit">Search</button>
         </form>
 
     </div>
@@ -49,23 +49,44 @@
     <h2 class="heading1">MEET OUR RECENT ARRIVALS</h2>
     <p></p>
     <div class="row">
-
-        <% pets.forEach(function(pet){ %>
-        <div class="pricing-component col-lg-4 col-md-6">
-            <div class="card">
-                <div class="card-header">
-                    <h3><%=pet.petname %></h3>
-                </div>
-                <div class="card-body">
-                    <img class="dog-image" src="<%=pet.pet_image %>" alt="dog-profile">
-
-                    <p>breed: <%= pet.breed %></p>
-                    <p>Age: <%= pet.petage %></p>
-
-                    <button type="button" class="btn btn-dark btn-lg button2">Adopt</button>
+      <%  if(value==0){%>
+          <% pets.forEach(function(pet){ %>
+            <div class="pricing-component col-lg-4 col-md-6">
+                <div class="card">
+                    <div class="card-header">
+                        <h3><%=pet.petname %></h3>
+                    </div>
+                    <div class="card-body">
+                        <img class="dog-image" src="<%=pet.pet_image %>" alt="dog-profile">
+    
+                        <p>breed: <%= pet.breed %></p>
+                        <p>Age: <%= pet.petage %></p>
+    
+                        <button type="button" class="btn btn-dark btn-lg button2">Adopt</button>
+                    </div>
                 </div>
             </div>
-        </div>
-        <% }); %>
+            <% }); %> 
+        <%}else{%>
+          <% for(var i=0; i<3 ; i++){ %>
+            <div class="pricing-component col-lg-4 col-md-6">
+              <div class="card">
+                  <div class="card-header">
+                      <h3><%=pets[i].petname %></h3>
+                  </div>
+                  <div class="card-body">
+                      <img class="dog-image" src="<%=pets[i].pet_image %>" alt="dog-profile">
+  
+                      <p>breed: <%= pets[i].breed %></p>
+                      <p>Age: <%= pets[i].petage %></p>
+  
+                      <button type="button" class="btn btn-dark btn-lg button2">Adopt</button>
+                  </div>
+              </div>
+          </div>
+          <%}}%>
+        
     </div>
-    <button type="button" class="btn btn-outline-dark" id="load">Load more</button>
+    <form action="/showPets" method="POST">
+    <button type="submit" class="btn btn-outline-dark" name="load" value="more" id="load">Load more</button>
+  </form>
