--- a/views/home.ejs
+++ b/views/home.ejs
@@ -140,6 +140,7 @@
           <h3>AfghanHound</h3>
         </div>
         <div class="card-body">
+          <img class="dog-image" src="images/boxer.jpg" alt="dog-profile">
           <h2>Get It</h2>
           <p>Afghan Hound</p>
           <p>Expectancy :12</p>
