--- a/views/home.ejs
+++ b/views/home.ejs
@@ -26,8 +26,8 @@
       <div class="col-lg-6">
         <h3 class="heading3">The online pet adoption community where people who want to adopt a pet connect with people
           who need to rehome a dog or cat.</h3>
-        <button type="button" class="btn btn-dark btn-lg button1">Adopt</button>
-        <button type="button" class="btn btn-dark btn-lg button1">Rehome</button>
+          <a  href="/register"><button type="button" class="btn btn-dark btn-lg button1">Adopt</button></a>
+          <a  href="/register"><button type="button" class="btn btn-dark btn-lg button1">Rehome</button></a>
       </div>
       <div class="col-lg-6">
         <img class="image1" src="images/dogBanner.svg" alt="iphone-mockup">
@@ -50,19 +50,20 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-lg-4 feature-box">
-        <i class="fas fa-check-circle fa-4x icon2"></i>
-        <h3 class="heading">Easy to use.</h3>
-        <p class="para1">So easy to use, even your dog could do it.</p>
+        <i class="fas fa-search fa-4x icon2"></i>
+        <h3 class="heading">Search</h3>
+        <p class="para1">It's easy to find a dog or cat who's right for you</p>
       </div>
       <div class="col-lg-4 feature-box">
-        <i class="fas fa-bullseye fa-4x icon2"></i>
-        <h3 class="heading">Elite Clientele</h3>
-        <p class="para1">We have all the dogs, the greatest dogs.</p>
+        <i class="fas fa-envelope fa-4x icon2"></i>
+        <h3 class="heading">Contact</h3>
+        <p class="para1">Once you find a pet, click "Adopt me" we will automatically contact the owner for you.</p>
       </div>
       <div class="col-lg-4 feature-box">
         <i class="fas fa-heart fa-4x icon2"></i>
-        <h3 class="heading">Guaranteed to work.</h3>
-        <p class="para1">Find the love of your dog's life or your money back.</p>
+        <h3 class="heading">Adopt</h3>
+        <p class="para1">Prepare your home for the arrival of your dog or cat to help them adjust to their new family.
+        </p>
       </div>
     </div>
   </div>
@@ -72,21 +73,19 @@
 
 
 <!-- Testimonials -->
-
 <section id="testimonials" class="colored-section pt-2 p-4 text-center justify-content-center">
   <div id="testimonial-carousel" class="carousel slide" data-ride="false">
     <div class="carousel-inner">
       <div class="carousel-item active container-fluid ">
-        <h2 class="testimonial-text">I no longer have to sniff other dogs for love. I've found the hottest Corgi on
-          TinDog. Woof.</h2>
+        <h2 class="testimonial-text">I found my companion Pebbles on PetAdoption.com and I have never been so happy in
+          my life</h2>
         <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
-        <em>Pebbles, New York</em>
+        <em>Pebbles, Hyderabad</em>
       </div>
       <div class="carousel-item container-fluid">
-        <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of
-          their life. I think.</h2>
-        <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
-        <em>Beverly, Illinois</em>
+        <h2 class="testimonial-text">My dog is the best thing to ever happen to me. I absolutely adore him.</h2>
+        <img class="testimonial-image" src="images/cutedog.jpg" alt="lady-profile">
+        <em>Beverly, Kolkata</em>
 
       </div>
       <a class="carousel-control-prev" href="#testimonial-carousel" role="button" data-slide="prev">
@@ -97,12 +96,7 @@
       </a>
     </div>
   </div>
-
-
-
-
 </section>
-
 
 <!-- Press -->
 
@@ -129,7 +123,6 @@
 
 
 <!-- Pricing -->
-
 <section id="pricing" class="white-section">
   <h2 class="heading1">MEET OUR RECENT ARRIVALS</h2>
   <p></p>
@@ -140,9 +133,9 @@
           <h3>AfghanHound</h3>
         </div>
         <div class="card-body">
-          <h2>Get It</h2>
+          <img class="dog-image" src="images/AfghanHound.jpg" alt="dog-profile">
           <p>Afghan Hound</p>
-          <p>Expectancy :12</p>
+          <p>Age: 8</p>
 
           <button type="button" class="btn btn-dark btn-lg button2">Adopt</button>
         </div>
@@ -157,9 +150,8 @@
         </div>
         <div class="card-body">
           <img class="dog-image" src="images/boxer.jpg" alt="dog-profile">
-          <h2>Get It</h2>
           <p>Boxer</p>
-          <p>Expectancy :10.4</p>
+          <p>Age: 5</p>
           <button type="button" class="btn btn-dark btn-lg button2">Adopt</button>
         </div>
       </div>
@@ -172,9 +164,8 @@
         </div>
         <div class="card-body">
           <img class="dog-image" src="images/pug.jpg" alt="dog-profile">
-          <h2>Get It</h2>
           <p>Pug</p>
-          <p>Expectancy :16</p>
+          <p>Age: 6</p>
           <button type="button" class="btn btn-dark btn-lg button2">Adopt</button>
         </div>
       </div>
