--- a/views/showPets.ejs
+++ b/views/showPets.ejs
@@ -110,3 +110,5 @@
         <button type="submit" class="btn btn-outline-dark" name="load" value="more" id="load">Load more</button>
     </form>
     <% } %>
+
+    <%-include("partials/footer")%>
