--- a/public/css/home.css
+++ b/public/css/home.css
@@ -101,7 +101,7 @@ p {
 	height: 100px;
 }
 
-.user-img{
+.user-img {
 	/* width: 20%;
 	height: 20%;
 	border-radius: 100%;
@@ -110,7 +110,6 @@ p {
 	border-radius: 100%;
 	height: 100px;
 	/* margin-left: 600px */
-
 }
 
 #press {
@@ -161,49 +160,48 @@ p {
 .contact {
 	background-color: #f1cdd7;
 }
-.userphoto
-		{
-			color: blue;
-			
-			width: 885px;
-			margin-left: 545px;
-			
-		}
-#Email	{
-			background-color: white;
-			text-align: center;
-		}
-#Name{
-			background-color: white;
-			text-align: center;
-		}
-hr{
-			width: 500px;
-			align-self: center;
-			color: black;
-		}
-.user-profile{
+.userphoto {
+	color: blue;
+
+	width: 885px;
+	margin-left: 545px;
+}
+#Email {
+	background-color: white;
+	text-align: center;
+}
+#Name {
+	background-color: white;
+	text-align: center;
+}
+hr {
+	width: 500px;
+	align-self: center;
+	color: black;
+}
+.user-profile {
 	margin-top: 20px;
 	width: 300px;
 	height: 300px;
 	border-radius: 100%;
 }
-#Info{
-			background-color: white;
-			text-align: center;
-		}
-.pet-profile{
-	margin-top: 20px;
-	width: 40%;
-	height: 40%;
-	border-radius: 30%;
-
-	
+#Info {
+	background-color: white;
+	text-align: center;
 }
-.userphot{
-	color: blue;
-			
-	width: 885px;
-	margin-left: 568px;
 
+.pet {
+	align-items: center;
+}
+.pet-profile {
+	margin-top: 20px;
+	width: 45%;
+	height: 45%;
+	align-items: center;
+	border-radius: 20%;
+}
+.userphot {
+	color: blue;
+	width: 885px;
+	margin-left: 40%;
 }
