--- a/views/PetProfile.ejs
+++ b/views/PetProfile.ejs
@@ -1,4 +1,3 @@
-
 <%-include("partials/header")%>
 
 
@@ -13,7 +12,7 @@
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
-                    
+
                     <li class="nav-item active">
                         <a class="nav-link" href="/showPets">Back To Pets</a>
                     </li>
@@ -23,57 +22,56 @@
                     <li class="nav-item active">
                         <a class="nav-link" href="/logout">Logout</a>
                     </li>
-                    
+
                 </ul>
             </div>
         </nav>
 
 
         <!-- Title -->
-        
+
 
     </div>
-    
+
+</section class="pet">
+
+<% pets.forEach(function(pet){ %>
+<% if(name==pet._id){%>
+
+<div class="userphoto">
+    <img src="<%=pet.pet_image %>" class="pet-profile justify-content-center" alt="User Photo Here">
+</div>
+<hr>
+<div id="Info">
+    Name: <h2><%=pet.petname %></h2>
+    <hr>
+    Breed: <%=pet.breed %>
+    <hr>
+    Color: <%=pet.color%>
+    <hr>
+    Age: <%=pet.petage %> years
+    <hr>
+    Owner Email: <%= pet.owner_email %>
+    <hr>
+    Owner PhoneNo: <%=pet.phone %>
+    <hr>
+    <div class="row justify-content-center ">
+        <div class="col-lg-6">
+            <form action="" method="POST">
+                <input type="hidden" name="email" value="<%= pet.owner_email %>">
+                <input type="hidden" name="name" value="<%=pet.petname %>">
+
+                <button type="submit" class="btn btn-dark btn-lg button1 j">Adopt</button>
+
+            </form>
+
+        </div>
+
+    </div>
+</div>
+
+</div>
+<% }%>
+<% }); %>
 </section>
-
-
-	
-	<% pets.forEach(function(pet){ %>
-        <% if(name==pet._id){%>
-            <div class="userphoto">
-                <img src="<%=pet.pet_image %>" class="pet-profile justify-content-center"  width="170px" height="250px" alt="User Photo Here">
-            </div>
-            <hr>
-			<div id="Info"> 
-				Name: <h2><%=pet.petname %></h2> 
-			<hr>
-				Breed: <%=pet.breed %>
-			<hr>
-				Color: <%=pet.color%>
-			<hr>
-				Age: <%=pet.petage %> years
-			<hr>
-				Owner Email: <%= pet.owner_email %>
-			<hr>
-                Owner PhoneNo: <%=pet.phone %>
-            <hr>
-            <div class="row justify-content-center ">
-                <div class="col-lg-6">
-                  <form action="" method="POST">
-                      <input type="hidden" name="email" value="<%= pet.owner_email %>" >
-                      <input type="hidden" name="name" value="<%=pet.petname %>">
-                      
-                    <button type="submit" class="btn btn-dark btn-lg button1 j">Adopt</button>
-
-                  </form>
-                  
-                </div>
-                
-              </div>
-            </div>
-		
-		</div>
-		<% }%>
-        <% }); %> 
- <%-include("partials/footer")%>
-	
+<%-include("partials/footer")%>
