--- a/views/login.ejs
+++ b/views/login.ejs
@@ -55,11 +55,11 @@
                         <% } %>
                         <div class="form-group">
                             <label>Email Address</label>
-                            <input type="text" class="form-control " name="email">
+                            <input type="text" class="form-control " name="email" placeholder="Enter Email">
                         </div>
                         <div class="form-group">
                             <label>Password</label>
-                            <input type="password" class="form-control" name="password">
+                            <input type="password" class="form-control" name="password" placeholder="Enter Password">
                         </div>
                         <button type="submit" class="btn button">Login</button>
                     </form>
