--- a/views/register.ejs
+++ b/views/register.ejs
@@ -49,7 +49,7 @@
                         <% } %>
                         <div class="form-group">
                             <label class="name">Name</label>
-                            <input type="text" class="form-control" name="name"
+                            <input type="text" class="form-control" name="name" placeholder="Enter Name"
                                 value="<%= typeof name != 'undefined' ? name : '' %>">
                         </div>
                         <div class="form-group">
@@ -59,24 +59,24 @@
                         </div>
                         <div class="form-group">
                             <label>Email</label>
-                            <input type="email" class="form-control" name='email'
+                            <input type="email" class="form-control" name='email' placeholder="Enter Email"
                                 value="<%= typeof email != 'undefined' ? email : '' %>">
                         </div>
                         <div class="form-group">
                             <label>Password</label>
-                            <input type="password" class="form-control" name="password"
+                            <input type="password" class="form-control" name="password" placeholder="Enter Password"
                                 value="<%= typeof password != 'undefined' ? password : '' %>">
                         </div>
 
                         <div class="form-group">
                             <label>Re-Enter Password</label>
                             <input type="password" class="form-control" name="password2"
+                                placeholder="Re-Enter Password "
                                 value="<%= typeof password2 != 'undefined' ? password2 : '' %>">
                         </div>
                         <div class="form-group">
-                            <label>Profile image</label>
-                            <i class="far fa-heart" aria-hidden="true"></i>
-                            <input type="file" class="form-control" name="image" id="image">
+                            <label>Profile image <span class="compulsory">*</span></label>
+                            <input type="file" class="form-control" name="image" id="image" required=true>
                         </div>
 
                         <button type="submit" class="btn button">Create account</button>
