--- a/views/user.ejs
+++ b/views/user.ejs
@@ -54,7 +54,12 @@
 <div id="Email">
     Phone_No:<%= users.phone%>
 </div>
+<div id="Email">
+    <a href="/edit"><button type="button" class="btn btn-dark btn-lg button1">Edit</button></a>
 </div>
+
+</div>
+
 
 
 
