--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -4,20 +4,17 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Login</title>
+    <title>Register</title>
 
     <!-- css file -->
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/register.css">
 
     <!-- bootstrap cdn -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
         integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-
-
-
-    <!-- logo -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link rel="shortcut icon" href="https://img.icons8.com/fluent/48/000000/pets.png" type="image" />
 
 
@@ -31,32 +28,39 @@
                     <div class="row login-left">
                         <p class="brand-name">PetAdoption</p>
                         <p class="brand-desc">Adopt a pet before they have to go to the shelter.</p>
-                        <img class="img-fluid animated bounce infinite" src="images/login.svg">
+                        <img class="img-fluid" src="images/register.svg">
+
                     </div>
 
                 </div>
             </div>
 
             <div class="col-sm-12 col-md-6 col-lg-7 right-side">
-
                 <div class="login-form">
-                    <h2 class="sign">Sign in to PetAdoption</h2>
                     <br>
+                    <h2 class="sign">Edit Your Account </h2>
+                    <form action="/edit" method="POST">
 
-                    <hr class="hr-text" data-content="OR">
-
-                    <form action="login" method="POST">
                         <div class="form-group">
-                            <label>Email Address</label>
-                            <input type="text" class="form-control " name="email" placeholder="Enter Email">
+                            <label class="name">Name</label>
+                            <input type="text" class="form-control" name="name" value="<%= user.name %>">
                         </div>
                         <div class="form-group">
-                            <label>Password</label>
-                            <input type="password" class="form-control" name="password" placeholder="Enter Password">
+                            <label>Phone</label>
+                            <input type="text" class="form-control" name="phone" placeholder="Enter phone"
+                                value="<%= user.phone %>">
                         </div>
-                        <button type="submit" class="btn button">Login</button>
+                        <div class="form-group">
+
+                            <input type="hidden" class="form-control" name='email' value="<%= user.email %>">
+                        </div>
+
+
+
+
+                        <button type="submit" class="btn button">Edit account</button>
                     </form>
-                    <p class="mt-4">No Account? <a class="feat" href="register">Register</a>
+
                 </div>
 
             </div>
