--- a/views/home.ejs
+++ b/views/home.ejs
@@ -80,12 +80,12 @@
         <h2 class="testimonial-text">I found my companion Pebbles on PetAdoption.com and I have never been so happy in
           my life</h2>
         <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
-        <em>Pebbles, Hyderabad</em>
+        <em>Vinay, Hyderabad</em>
       </div>
       <div class="carousel-item container-fluid">
         <h2 class="testimonial-text">My dog is the best thing to ever happen to me. I absolutely adore him.</h2>
         <img class="testimonial-image" src="images/cutedog.jpg" alt="lady-profile">
-        <em>Beverly, Kolkata</em>
+        <em>Dhruv, Mumbai</em>
 
       </div>
       <a class="carousel-control-prev" href="#testimonial-carousel" role="button" data-slide="prev">
