--- a/views/PetProfile.ejs
+++ b/views/PetProfile.ejs
@@ -57,13 +57,15 @@
     <hr>
     <div class="row justify-content-center ">
         <div class="col-lg-6">
-            <form action="" method="POST">
+            <form action="/showPets/:<%= pet._id %>" method="POST">
                 <input type="hidden" name="email" value="<%= pet.owner_email %>">
                 <input type="hidden" name="name" value="<%=pet.petname %>">
 
                 <button type="submit" class="btn btn-dark btn-lg button1 j">Adopt</button>
 
+
             </form>
+            
 
         </div>
 
